<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>qr_detection_and_decision_of_picking_robot</name>
 <version>0.0.1</version>
 <description>This package provides launch file for operating qr_detection_and_decision_of_picking_robot</description>
  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>aruco_ros</exec_depend>
  <exec_depend>detect_aruco_marker_skill</exec_depend>
  <exec_depend>moveit_skills</exec_depend>
  <exec_depend>io_control_gripper_skill</exec_depend>
  <exec_depend>man2_bt_operator</exec_depend>
  <exec_depend>ur5e_cell_moveit_config</exec_depend>

  <!--test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>python3-pytest</test_depend-->

  <export>
  	<build_type>ament_python</build_type>
  </export>
</package>
